--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "faster-whisper>=1.1.1",
     "numpy>=2.2.6",
     "pyperclip>=1.9.0",
+    "rich>=13.0.0",
     "sounddevice>=0.5.2",
 ]
 
